# PaddleCustomDevice

.github/workflows/: _Metax-X86.yml  _Metax_work_private.yaml  ixuca-smoke-schedule.yml  ixuca-smoke-watchdog.yml  metax_work.yaml  update_paddle_submodule.yml
backends/gcu/: ci_test.sh
backends/gcu/kernels/: full_kernel.cc  fused_conv2d_add_act_kernel.cc  gather_nd_kernel.cc  multiclass_nms3_kernel.cc  pool2d_kernel.cc  reduce_kernels.cc  scatter_kernel.cc  set_value_kernel.cc  slice_kernel.cc  stack_kernel.cc  take_along_axis.cc  temporal_shift_kernel.cc
backends/gcu/kernels/funcs/: topsaten_op_launch.h
backends/gcu/passes/: common.py  gcu_pass_pipeline.cc
backends/gcu/tests/unittests/: test_fused_rotary_embedding.py
backends/iluvatar_gpu/: CMakeLists.txt  build_inc.sh
backends/iluvatar_gpu/kernels/cuda_kernels/: batch_norm_grad_kernel_register.cc  batch_norm_kernel_register.cc  conv_dnn_grad_kernel_register.cu  conv_dnn_kernel_register.cu  conv_grad_kernel_register.cu  conv_kernel_register.cu  conv_transpose_grad_kernel_register.cu  conv_transpose_kernel_register.cu  cross_entropy_grad_kernel_register.cu  cross_entropy_kernel_register.cu  ctc_align_kernel_register.cu  depthwise_conv_grad_kernel_register.cu  depthwise_conv_kernel_register.cu  depthwise_conv_transpose_grad_kernel_register.cu  depthwise_conv_transpose_kernel_register.cu  elementwise_kernel_register.cc  exponential_kernel_register.cu  flash_attn_kernel.cu  instance_norm_grad_kernel_register.cu  instance_norm_kernel_register.cu  interpolate_kernel_register.cc  log_softmax_grad_kernel_register.cu  log_softmax_kernel_register.cu  rnn_grad_kernel_register.cu  rnn_kernel_register.cu  softmax_grad_kernel_register.cu  softmax_kernel_register.cu
backends/iluvatar_gpu/patches/: paddle-corex.patch
backends/iluvatar_gpu/runtime/: iluvatar_context.cc  iluvatar_context.h  runtime.cc
backends/iluvatar_gpu/tests/: disabled_test.txt  run_test.sh
backends/iluvatar_gpu/tests/unittests/: test_p_norm_op_iluvatar.py
backends/intel_hpu/: setup.py.in
backends/intel_hpu/custom_ops/llama_infer/: fused_gate_moe.cc  fused_quant.cc  prepare_block_metadata.cc
backends/intel_hpu/custom_ops/src/: fused_moe.cc
backends/intel_hpu/custom_ops/tests/: test_mixture_of_experts.py
backends/intel_hpu/kernels/: funcs.h  hpu_funcs.h  top_p_hpu.cc
backends/intel_hpu/tests/: config.py
backends/intel_hpu/tests/unittests/: test_cast.py  test_cast_8k_4k.py  test_fused_fp8_flatPA_proj.py  test_fused_fp8_rms_qkv_rope_t.py  test_fused_mixture_of_experts.py  test_fused_mlp.py
backends/intel_hpu/tools/: pr_hpu_ci.sh
backends/metax_gpu/: CMakeLists.txt  build.sh  setup.py.in
backends/metax_gpu/common/: flags_declare.cc
backends/metax_gpu/kernels/: flags_declare.cu
backends/metax_gpu/kernels/cuda_kernels/: accuracy_kernel_register.cu  bincount_kernel_register.cu  c_embedding_grad_kernel_register.cu  cast_kernel_register.cu  ctc_align_kernel_register.cu  exponential_kernel_register.cu  flatten2_grad_kernel_register.cu  index_add_kernel_register.cu  interpolate_kernel_register.cu  qr_kernel_register.cu  set_value_kernel_register.cu  uniform_kernel_register.cu
backends/metax_gpu/kernels/metax_kernel/: blha_get_max_len_register.cu  block_attn.h  mmha_util.cu.h  quant_dequant.h
backends/metax_gpu/patch/: paddle.patch
backends/metax_gpu/runtime/: runtime.cc
backends/metax_gpu/tests/: CMakeLists.txt  ignore.txt  run_test.sh
backends/mlu/tests/unittests/: test_slice_op_mlu.py
backends/mlu/tools/: pr_ci_mlu.sh
backends/npu/tests/unittests/: test_activation_op.py
backends/npu/tools/: disable_ut_npu_910b
